[package]
name = "chess_perft"
version = "3.1.1"
authors = ["Jordan Bray <jordanbray@gmail.com>"]
description = "This package runs a 'perft' test on a particular chess position.  This makes every move out to a certain depth, and counts the number of leaf-nodes.  This is used to verify that move generation is correct and fast.  This also (optionally) verifies that the hashing function produces unique values for each position."
homepage = "https://github.com/jordanbray/chess_perft"
repository = "https://github.com/jordanbray/chess_perft"
readme = "README.md"
keywords = ["chess", "perft", "move"]
license = "LGPL-3.0+"
edition = "2018"

[build]
rustflags = "-C target-cpu=native"
[profile.release]
opt-level = 3
debug = false

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3

[dependencies]
chess = { path = "../chess/" }
shakmaty = "0.27.3"
chessie = "1.0.0"
cozy-chess = "0.3.4"
getopts = "0.2.19"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "benches"
harness = false
